added sections(welcome-section, projects)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>RecipeLab</title>
 </head>
 <body>
-    
+    <section class="top">
+        <nav id="navbar">
+            <h5>RecipeLab</h5>
+            <li><a href="#welcome-section">home</a></li>
+            <li><a href="#projects">products</a></li>
+            <li><a href="#top">about us</a></li>
+        </nav>
+    </section>
+    <section id="welcome-section">
+        <h1> Welcome to our data book</h1>
+    </section>
+    <section id="projects">
+        <h3 class="project-tile"><a>Tiramisu</a></h3>
+    </section>
 </body>
 </html>
