added html[ div(#project-tile), button(profile-link)] css[ body(bg-color), div(style) navbar(position) @media query(body>>bg-color)]

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <h1> Welcome to our data book</h1>
     </section>
     <section id="projects">
-        <h3 class="project-tile"><a>Tiramisu</a></h3>
+        <div class="project-tile"><h3 id="tiramisu">Tiramisu</h3>
+        <button><a id="profile-link" target="_blank" href="tiramisu"> click here </a></button>
+        </div>
     </section>
 </body>
 </html>
