Link to styles.css, added( ul, 2 project-tile, 2 button)

--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <title>RecipeLab</title>
 </head>
 <body>
     <section class="top">
         <nav id="navbar">
             <h5>RecipeLab</h5>
+            <ul>
             <li><a href="#welcome-section">home</a></li>
             <li><a href="#projects">products</a></li>
             <li><a href="#top">about us</a></li>
+            </ul>
         </nav>
     </section>
     <section id="welcome-section">
@@ -20,8 +22,13 @@
     </section>
     <section id="projects">
         <div class="project-tile"><h3 id="tiramisu">Tiramisu</h3>
-        <button><a id="profile-link" target="_blank" href="tiramisu"> click here </a></button>
+            <button class="tile-button"> click here </button>
         </div>
+        <div class="project-tile"><h3 id="baklava">Baklava </h3>
+            <button class="tile-button"> click here </button>
+        </div>
+        <div class="project-tile"><h3 id="macaroon">Macaroon</h3>
+            <button class="tile-button"> click here </button>
     </section>
 </body>
 </html>
