Added background text in welcome section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </nav>
     </section>
     <section id="welcome-section">
+        <h4>cakes pies pastries custards chocolates frosting fruit compotes ganache cheesecake baklava macarons churros éclairs tiramisu indulgent delights bliss creamy decadent sweet treats confections truffles cookies brownies ice cream sorbet gelato parfait mousse pudding flan tarts cannoli cupcakes doughnuts marshmallows fudge brittle caramel honey maple syrup whipped cream shortbread toffee nut brittle lemon bars raspberry sorbet chocolate chip cookies red velvet cake black forest gateau lemon meringue pie apple strudel pecan pie strawberry cheesecake</h4>
         <h1> Welcome to our data book</h1>
     </section>
     <section id="projects">
