edit welcome-section and project-tile

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         </nav>
     </section>
     <section id="welcome-section">
-        <h4>cakes pastries custards chocolates frosting fruit compotes ganache cheesecake baklava macarons churros éclairs tiramisu indulgent delights bliss creamy decadent sweet treats confections truffles cookies brownies ice cream sorbet gelato parfait mousse pudding flan tarts cannoli cupcakes doughnuts marshmallows fudge brittle caramel honey maple syrup whipped cream shortbread toffee nut brittle lemon bars raspberry sorbet chocolate chip cookies red velvet cake black forest gateau lemon meringue pie apple strudel pecan pie strawberry cheesecake cakes pies pastries custards chocolates frosting fruit compotes ganache cheesecake baklava macarons churros éclairs tiramisu indulgent delights bliss creamy decadent sweet treats confections truffles cookies brownies ice cream sorbet gelato parfait mousse pudding flan tarts cannoli cupcakes doughnuts marshmallows fudge brittle caramel honey maple syrup whipped cream shortbread toffee nut brittle lemon bars raspberry sorbet chocolate chip cookies red velvet cake black forest gateau lemon meringue pie apple strudel pecan pie strawberry cheesecake cakes pies pastries custards chocolates frosting fruit compotes ganache cheesecake baklava macarons churros éclairs tiramisu indulgent delights bliss creamy decadent sweet treats confections truffles cookies brownies ice cream sorbet gelato parfait mousse pudding flan tarts cannoli cupcakes doughnuts marshmallows fudge brittle caramel honey maple syrup whipped cream shortbread toffee nut brittle lemon bars raspberry sorbet chocolate chip cookies red velvet cake black forest gateau lemon meringue pie apple strudel pecan pie strawberry cheesecake cakes pies pastries custards chocolates frosting fruit compotes ganache cheesecake baklava macarons churros éclairs tiramisu indulgent delights bliss creamy decadent sweet treats confections truffles cookies brownies ice cream sorbet gelato parfait mousse pudding flan tarts cannoli cupcakes doughnuts marshmallows fudge brittle caramel honey maple syrup whipped cream shortbread toffee nut brittle lemon bars raspberry sorbet chocolate chip cookies red velvet cake black forest gateau lemon meringue pie apple strudel pecan pie strawberry cheesecake cakes pies pastries custards chocolates frosting fruit compotes ganache cheesecake baklava macarons churros éclairs tiramisu indulgent delights bliss creamy decadent sweet treats confections truffles cookies brownies ice cream sorbet gelato parfait mousse pudding flan tarts cannoli cupcakes doughnuts marshmallows fudge brittle caramel honey maple syrup whipped cream shortbread toffee nut brittle lemon bars raspberry sorbet chocolate chip cookies red velvet cake black forest gateau lemon meringue pie apple strudel pecan pie strawberry cheesecake</h4>
+        <h4>cakes pies pastries custards chocolates frosting fruit compotes ganache cheesecake baklava macarons churros éclairs tiramisu indulgent delights bliss creamy decadent sweet treats confections truffles cookies brownies ice cream sorbet gelato parfait mousse pudding flan tarts cannoli cupcakes doughnuts marshmallows fudge brittle caramel honey maple syrup whipped cream shortbread toffee nut brittle lemon bars raspberry sorbet chocolate chip cookies red velvet cake black forest gateau lemon meringue pie apple strudel pecan pie strawberry cheesecake</h4>
         <h1> Welcome to our data book</h1>
     </section>
     <section id="projects">
-        <div class="project-tile tiramisu-img-bg"><h3 id="tiramisu">Tiramisu</h3>
+        <div class="project-tile"><h3 id="tiramisu">Tiramisu</h3>
             <button class="tile-button"> click here </button>
         </div>
         <div class="project-tile"><h3 id="baklava">Baklava </h3>
@@ -30,10 +30,6 @@
         </div>
         <div class="project-tile"><h3 id="macaroon">Macaroon</h3>
             <button class="tile-button"> click here </button>
-        </div>
-        <div class="project-tile"><h3 id="brownies">Brownies</h3>
-            <button class="tile-button"> click here </button>
-        </div>
-        </section>
+    </section>
 </body>
 </html>
