center welcome-section

--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
         <div class="project-tile"><h3 id="brownies">Brownies</h3>
             <button class="tile-button"> click here </button>
         </div>
+        <div class="project-tile"><h3 id="brownies">Brownies</h3>
+            <button class="tile-button"> click here </button>
+        </div>
+        <div class="project-tile"><h3 id="brownies">Brownies</h3>
+            <button class="tile-button"> click here </button>
+        </div>
+
+
         </section>
 </body>
 </html>
