--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <div class="project-tile tiramisu-img-bg"><h3 id="tiramisu">Tiramisu</h3>
             <button class="tile-button"> click here </button>
         </div>
-        <div class="project-tile"><h3 id="baklava">Baklava </h3>
+        <div class="project-tile baklava-img-bg"><h3 id="baklava">Baklava </h3>
             <button class="tile-button"> click here </button>
         </div>
-        <div class="project-tile"><h3 id="macaroon">Macaroon</h3>
+        <div class="project-tile macaroon-img-bg"><h3 id="macaroon">Macaroon</h3>
             <button class="tile-button"> click here </button>
         </div>
-        <div class="project-tile"><h3 id="brownies">Brownies</h3>
+        <div class="project-tile brownies-img-bg"><h3 id="brownies">Brownies</h3>
             <button class="tile-button"> click here </button>
         </div>
         <div class="project-tile"><h3 id="brownies">Brownies</h3>
