--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <div class="project-tile brownies-img-bg"><h3 id="brownies">Brownies</h3>
             <button class="tile-button"> click here </button>
         </div>
-        <div class="project-tile"><h3 id="brownies">Brownies</h3>
+        <div class="project-tile croissant-img-bg"><h3 id="croissant">Croissant</h3>
             <button class="tile-button"> click here </button>
         </div>
-        <div class="project-tile"><h3 id="brownies">Brownies</h3>
+        <div class="project-tile apple-pie-img-bg"><h3 id="apple-pie">Apple Pie</h3>
             <button class="tile-button"> click here </button>
         </div>
 
